--- a/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
+++ b/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
@@ -1,6 +1,7 @@
 <div>
   <div>
-    <button (click)="bgGoogleDriveService.signInGoogleDrive()">Sign In Google Drive</button>
+    <button (click)="bgGoogleServiceAuth.signInGoogleDrive()">Sign In Google Drive</button>
+   <button (click)="listDriveFiles()">List</button>
     <button (click)="bgCheckShare()">Share</button>
     <button (click)="bgSaveVocabulaire()">Save In Drive</button>
     <div>
