--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,7 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
-      <div class="header"><span class="title"> {{ title }}</span> <span><a href="home.html">home</a>  v 0.1.a</span></div>
+      <div class="header"><span class="title"> {{ title }}</span> <span><a href="home.html">home</a>  v 0.1.b</span></div>
       <word-stuffing-root/>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
